--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "Trotamundos",
+  "name": "lab-express-auth-roles",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon -e js,hbs,css server.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
-    "mongoose": "^7.1.0",
+    "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.7"
   }
 }
