--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-# MONGODB_URI=mongodb://127.0.0.1/trotandomundos
-MONGODB_URI=mongodb+srv://irene:rose1992@cluster0.0aqu7su.mongodb.net/trotamundos
+     MONGODB_URI=mongodb://127.0.0.1/trotandomundos
+#MONGODB_URI=mongodb+srv://irene:rose1992@cluster0.0aqu7su.mongodb.net/trotamundos
 SESS_SECRET=trotamundos
 CLOUDINARY_NAME=druyghd0c
 CLOUDINARY_KEY=467939433663254
