--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon -e js,hbs,css server.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.36.4",
     "connect-mongo": "^4.6.0",
