--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon -e js,hbs,css server.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.36.4",
     "connect-mongo": "^4.6.0",
@@ -18,7 +19,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "np": "^7.7.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
