--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.36.4",
+    "cloudinary": "^1.37.0",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
+    "mapbox-gl": "^2.14.1",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
