--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "handlebars-helpers": "^0.10.0",
     "hbs": "^4.2.0",
     "mapbox-gl": "^2.14.1",
     "mongoose": "^6.2.0",
