--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
+    "handlebars-paginate": "^0.1.0",
     "hbs": "^4.2.0",
     "mapbox-gl": "^2.14.1",
     "mongoose": "^6.2.0",
